--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "psr/http-message-implementation": "^1.0"
     },
     "require-dev": {
+        "php": ">=7.0",
         "phpspec/phpspec": "^3.0",
         "monolog/monolog": "^1.21",
         "zendframework/zend-diactoros": "^1.3",
