--- a/phpspec.yml
+++ b/phpspec.yml
@@ -2,3 +2,14 @@ suites:
     acme_suite:
         namespace: jschreuder\Middle
         psr4_prefix: jschreuder\Middle
+
+extensions:
+    - PhpSpec\Extension\CodeCoverageExtension
+
+code_coverage:
+    format:
+        - clover
+    output:
+        clover: coverage.xml
+    whitelist:
+        - src
