Have scrutinizer actually use coverage.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,3 +6,6 @@ build:
         override:
             -
                 command: 'bin/phpspec run'
+                coverage:
+                    file: 'coverage.xml'
+                    format: 'php-clover'
