--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,16 @@
         "zendframework/zend-diactoros": "^1.3",
         "twig/twig": "^1.24",
         "zendframework/zend-session": "^2.7",
-        "ocramius/psr7-session": "^2.0",
+        "lcobucci/jwt": "^3.1",
+        "dflydev/fig-cookies": "^1.0",
         "symfony/routing": "^3.1"
     },
     "suggests": {
         "twig/twig": "Required when using the TwigRenderer view-engine implementation",
         "symfony/routing": "Required when using the SymfonyRouter implementation",
         "zendframework/zend-session": "Required when using the ZendSession implementation",
-        "ocramius/psr7-session": "Required when using the JwtSession implementation",
+        "lcobucci/jwt": "Required when using the JwtSession implementation",
+        "dflydev/fig-cookies": "Required when using the JwtSession implementation",
         "zendframework/zend-diactoros": "Required by the RedirectRendererMiddleware and TwigRenderer"
     },
     "config": {
