--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,13 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "psr/log-implementation": "^1.0",
-        "psr/http-message-implementation": "^1.0"
+        "psr/http-message": "^1.0",
+        "psr/log": "^1.0"
     },
     "require-dev": {
         "php": ">=7.0",
         "phpspec/phpspec": "^3.0",
         "henrikbjorn/phpspec-code-coverage": "^3.0",
-        "monolog/monolog": "^1.21",
-        "zendframework/zend-diactoros": "^1.3",
         "twig/twig": "^1.24",
         "zendframework/zend-session": "^2.7",
         "lcobucci/jwt": "^3.1",
@@ -31,8 +29,7 @@
         "symfony/routing": "Required when using the SymfonyRouter implementation",
         "zendframework/zend-session": "Required when using the ZendSession implementation",
         "lcobucci/jwt": "Required when using the JwtSession implementation",
-        "dflydev/fig-cookies": "Required when using the JwtSession implementation",
-        "zendframework/zend-diactoros": "Required by the RedirectRendererMiddleware and TwigRenderer"
+        "dflydev/fig-cookies": "Required when using the JwtSession implementation"
     },
     "config": {
         "bin-dir": "bin"
