--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "minimum-stability": "stable",
     "require": {
         "psr/http-message": "^1.0",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "http-interop/http-middleware": "^0.1.1",
+        "http-interop/http-factory": "^0.1.0"
     },
     "require-dev": {
         "php": ">=7.0",
