--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,8 @@ build:
     environment:
         php:
             version: 8.0
+            ini:
+                'xdebug.mode': 'coverage'
     tests:
         override:
             -
