--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,3 +11,8 @@ build:
                 coverage:
                     file: 'coverage.xml'
                     format: 'php-clover'
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
