--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,8 @@
+checks:
+    php:
+        code_rating: true
+        duplication: true
+
 build:
     image: default-bionic
     environment:
@@ -12,9 +17,3 @@ build:
                 coverage:
                     file: 'coverage.xml'
                     format: 'php-clover'
-    nodes:
-        analysis:
-            tests:
-                override:
-                  - php-scrutinizer-run
-                  - phpcs-run
