--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=8.1",
         "ext-json": "*",
         "psr/http-message": "^1.0",
-        "psr/log": "^3.0",
+        "psr/log": "^2.0 || ^3.0",
         "psr/http-server-middleware": "^1.0",
         "psr/http-factory": "^1.0"
     },
