--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,15 +15,18 @@ build:
     image: default-bionic
     environment:
         php:
-            version: 8.1
             ini:
                 'xdebug.mode': 'coverage'
     nodes:
         analysis:
+            environment:
+                php: 8.1
             tests:
                 override:
                     - php-scrutinizer-run
-        my_tests_with_coverage:
+        phpspec:
+            environment:
+                php: 8.1
             tests:
                 override:
                   - command: 'bin/phpspec run'
