refactor: migrate test suite from PHPSpec to Pest PHP
This commit represents a complete migration of our test suite from PHPSpec to Pest PHP. Key changes include: - Converted all PHPSpec specification files to Pest PHP test files - Restructured test directory from spec/ to tests/Unit/ - Updated test assertions to use Pest's expect() syntax - Maintained full test coverage while improving readability - Migrated mock objects from PHPSpec to Mockery - Updated composer.json to replace phpspec with pestphp - Preserved all existing test scenarios and edge cases - Improved test organization with better directory structure

The migration maintains the same level of test coverage while leveraging Pest PHP's more expressive and modern testing syntax.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,6 @@
 filter:
     excluded_paths:
-        - 'spec/*'
+        - 'tests/*'
 
 checks:
     php: true
@@ -12,7 +12,7 @@ coding_style:
                 concatenation: true
 
 build:
-    image: default-bionic
+    image: default-jammy
     environment:
         php:
             ini:
@@ -20,16 +20,16 @@ build:
     nodes:
         analysis:
             environment:
-                php: 8.1
+                php: 8.3
             tests:
                 override:
                     - php-scrutinizer-run
-        phpspec:
+        pest:
             environment:
-                php: 8.1
+                php: 8.3
             tests:
                 override:
-                  - command: 'bin/phpspec run'
+                  - command: 'vendor/bin/pest --coverage --coverage-clover=coverage.xml'
                     coverage:
                         file: 'coverage.xml'
                         format: 'php-clover'
