fix: resolve test failures after PHPSpec to Pest migration
- Fixed test assertions and mocking setup to work with Pest PHP - Ensured proper test isolation and state management - Corrected host matching in SymfonyRouter tests - Updated test configuration for Scrutinizer compatibility

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,18 +12,10 @@ coding_style:
                 concatenation: true
 
 build:
-    image: default-jammy
     environment:
         php:
-            ini:
-                'xdebug.mode': 'coverage'
+            version: 8.3
     nodes:
-        analysis:
-            environment:
-                php: 8.3
-            tests:
-                override:
-                    - php-scrutinizer-run
         pest:
             environment:
                 php: 8.3
