Full integration tests, also needed to add Laminas Diactoros to do full testing.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "mockery/mockery": "^1.6",
         "twig/twig": "^3.8",
         "laminas/laminas-session": "^2.17",
+        "laminas/laminas-diactoros": "^3.6.0",
         "symfony/routing": "^7.0"
     },
     "suggest": {
