--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,12 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=8.3",
-        "ext-json": "*",
-        "psr/http-message": "^1.0",
-        "psr/log": "^2.0 || ^3.0",
         "psr/http-server-middleware": "^1.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-message-implementation": "^2.0",
+        "psr/http-factory-implementation": "^1.0"
     },
     "require-dev": {
+        "psr/log": "^3.0",
         "pestphp/pest": "^2.34",
         "mockery/mockery": "^1.6",
         "twig/twig": "^3.8",
@@ -26,7 +25,11 @@
         "laminas/laminas-diactoros": "^3.6",
         "symfony/routing": "^7.0"
     },
+    "provide": {
+        "psr/http-server-middleware-implementation": "1.0"
+    },
     "suggest": {
+        "psr/log-implementation": "Required when using the ErrorHandlerMiddleware",
         "twig/twig": "Required when using the TwigRenderer view-engine implementation",
         "symfony/routing": "Required when using the SymfonyRouter implementation",
         "laminas/laminas-session": "Required when using the LaminasSession implementation"
@@ -39,11 +42,6 @@
     "autoload": {
         "psr-4": {
             "jschreuder\\Middle\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests"
         }
     },
     "scripts": {
