--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,18 +1,22 @@
 build:
+  image: default-jammy
   environment:
     php:
-      version: 8.3.3
+      version: 8.4.12
       ini:
         'xdebug.mode': 'coverage'
   nodes:
     analysis:
       tests:
         override:
-          - php-scrutinizer-run
-    pest:
+          - php-scrutinizer-run --enable-security-analysis
+    tests:
+      dependencies:
+        before:
+          - pecl install xdebug
       tests:
         override:
-          - command: 'vendor/bin/pest --coverage --coverage-clover=coverage.xml'
+          - command: 'php -d zend_extension=xdebug.so -d xdebug.mode=coverage vendor/bin/pest --coverage --coverage-clover=coverage.xml'
             coverage:
               file: 'coverage.xml'
               format: 'php-clover'
